# grocery-mvp

./: .env.example  .gitignore  Dockerfile  README.md  TASKS.md  docker-compose.yml  grocery_mvp.db  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py  pages.py
app/api/: __init__.py  addresses.py  admin.py  auth.py  cart.py  orders.py  products.py
app/models/: __init__.py  address.py  cart.py  order.py  product.py  user.py
app/schemas/: __init__.py  address.py  auth.py  cart.py  order.py  product.py
app/services/: __init__.py  address_service.py  auth_service.py  cart_service.py  invoice_service.py  order_service.py  product_service.py
app/templates/: base.html  cart.html  checkout.html  home.html
app/templates/auth/: login.html
app/templates/components/: cart_drawer.html  footer.html  header.html  product_card.html  status_badge.html
app/templates/errors/: 404.html  500.html
app/templates/orders/: detail.html  list.html
app/templates/products/: detail.html  list.html
app/templates/profile/: address_form.html  index.html
scripts/: seed_dev.py  seed_postcodes.py  seed_products.py
tests/: conftest.py  test_api.py
